--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.5",
     "express": "^4.17.1",
+    "http-proxy-agent": "^7.0.2",
+    "https-proxy-agent": "^7.0.6",
     "jssoup": "0.0.12",
     "shelljs": "^0.8.4",
     "terser": "^5.44.0"
