--- a/config.json
+++ b/config.json
@@ -1,15 +1,16 @@
 {
   "port": 10086,
-  "webPort": 8002,
-  "isCloseDetailedLog": true,
-  "isOpenWebsocket": false,
-  "isAutoCompress": true,
-  "upstreamProxyUrl": "http://127.0.0.1:8080",
-  "hook_target_supported_types": "url,regex",
+  "web_port": 8002,
+  "is_close_detailedLog": true,
+  "is_open_websocket": false,
+  "is_auto_compress": true,
+  "upstream_proxyUrl": "http://127.0.0.1:8080",
+  "is_open_hook_target": true,
+  "hook_target_supported_types": "url,regex,domain",
   "hook_target": [
     {
-      "type": "url",
-      "value": "https://www.mashangpa.com/static/js/19pro.js"
+      "type": "domain",
+      "value": "hg.imou.com"
     }
   ]
 }
