--- a/config.json
+++ b/config.json
@@ -3,13 +3,23 @@
   "web_port": 8002,
   "is_close_detailedLog": true,
   "is_open_websocket": false,
-  "is_auto_compress": true,
+  "is_auto_compress": false,
   "is_open_hook_target": true,
-  "hook_target_supported_types": "url,regex,domain",
+  "is_regenerate_js": false,
+  "supported_plugin_list": [
+    "positioningEncryptionHook",
+    "registerFunctionsToWindow"
+  ],
+  "current_use_plugin": "registerFunctionsToWindow",
+  "hook_target_supported_types": [
+    "url",
+    "regex",
+    "domain"
+  ],
   "hook_target": [
     {
       "type": "domain",
-      "value": ""
+      "value": "hg.imou.com"
     }
   ]
 }
