--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/core": "^7.12.10",
     "@babel/generator": "^7.12.11",
+    "@babel/traverse": "^7.28.4",
     "@babel/types": "^7.12.12",
     "anyproxy": "^4.1.3",
     "body-parser": "^1.19.0",
