--- a/config.json
+++ b/config.json
@@ -1,16 +1,24 @@
 {
   "port": 10086,
+
+  "is_open_web_server": true,
   "web_port": 8002,
+
+  "is_open_proxy": false,
+  "proxy_url": "http://127.0.0.1:10809",
+
   "is_close_detailedLog": true,
   "is_open_websocket": false,
   "is_auto_compress": false,
   "is_open_hook_target": true,
   "is_regenerate_js": false,
+
   "supported_plugin_list": [
     "positioningEncryptionHook",
     "registerFunctionsToWindow"
   ],
   "current_use_plugin": "registerFunctionsToWindow",
+
   "hook_target_supported_types": [
     "url",
     "regex",
