连接redis数据库
解决检测控制台又不知如何绕过时，如何使用hook.search的问题（缓存到一个数据库，将所有内容输出

--- a/config.json
+++ b/config.json
@@ -39,6 +39,10 @@
     {
       "type": "str",
       "value": "jquery-3.6.0.min.js"
+    },
+    {
+      "type": "str",
+      "value": "base.js"
     }
   ]
 }
