可通过config文件来决定是否使用增强版的变量检索

--- a/config.json
+++ b/config.json
@@ -12,10 +12,11 @@
   "is_auto_compress": true,
   "is_open_hook_target": true,
   "is_regenerate_js": false,
+  "is_export_data_in_redis":false,
 
   "supported_plugin_list": [
     "positioningEncryptionHook",
-    "registerFunctionsToWindow"
+    "registerFunctionsInWindow"
   ],
   "current_use_plugin": "positioningEncryptionHook",
 
