redis输出内容到文件中、减少数据丢失

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jssoup": "0.0.12",
     "redis": "^5.8.2",
     "shelljs": "^0.8.4",
-    "terser": "^5.44.0"
+    "terser": "^5.44.0",
+    "winston": "^3.17.0"
   }
 }
